--- a/l28jsintro.html
+++ b/l28jsintro.html
@@ -1,59 +1,155 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>JS Intro</title>
-	</head>
-	<body>
-		<h1>JS Basic</h1>
-		<script type="text/javascript">
-			// console.log("kyaw kyaw");
-			// console.log("aung aung");
-			// console.log(`Su Su`);
+  <head>
+    <title>JS Intro</title>
+  </head>
+  <body>
+    <h1>JS Basic</h1>
+    <script type="text/javascript">
+      // console.log("kyaw kyaw");
+      // console.log("aung aung");
+      // console.log(`Su Su`);
 
-			// console.log(500);
-			// console.log("600");
-			// console.log('700');
-			// console.log(`800`);
+      // console.log(500);
+      // console.log("600");
+      // console.log('700');
+      // console.log(`800`);
 
-			// console.log("zaw zaw" , "tun tun");
-			// console.log("hlaing min" , 24,'hello world');
-			// console.log("String",24,true);
-			// console.log(199,33);
+      // console.log("zaw zaw" , "tun tun");
+      // console.log("hlaing min" , 24,'hello world');
+      // console.log("String",24,true);
+      // console.log(199,33);
 
-			// comment
-			// this is single line comment 
-			/* this is multi line  
+      // comment
+      // this is single line comment
+      /* this is multi line  
 			                       comment */
 
-			// console.log(10+10);
-			// console.log(10 + '40');
-			// console.log('20' + "50");
-			// console.log("aung aung" + 10);
+      // console.log(10+10);
+      // console.log(10 + '40');
+      // console.log('20' + "50");
+      // console.log("aung aung" + 10);
 
-			// console.log(true + true);
-			// console.log("true" + false);
-			// console.log(false + true);
+      // console.log(true + true);
+      // console.log("true" + false);
+      // console.log(false + true);
 
-			// console.log(true + 50);
-			// console.log(false + 50);
-			// console.log('true' + 20);
-			// console.log("true" + "aung aung");
-			// console.log("zaw zaw" + false);
+      // console.log(true + 50);
+      // console.log(false + 50);
+      // console.log('true' + 20);
+      // console.log("true" + "aung aung");
+      // console.log("zaw zaw" + false);
 
-			// alert("Hello world");
-			// window.alert('Save Myanmar');
-			// alert("Are you ready to learn Js");
+      // alert("Hello world");
+      // window.alert('Save Myanmar');
+      // alert("Are you ready to learn Js");
 
-			// Variable (var/let/const);
-			// var/let/const variablename = value;
+      // Variable (var/let/const);
+      // var/let/const variablename = value;
 
-			var fullname = "Myo Myo";
-			console.log("fullname");
-			console.log('fullname');
-			console.log(`fullname`);
-			console.log(fullname);
-			window.alert(fullname);
+      var fullname = "Myo Myo";
+      // console.log("fullname");
+      // console.log('fullname');
+      // console.log(`fullname`);
+      // console.log(fullname);
+      // window.alert(fullname);
 
-		</script>
-	</body>
+      // concatenate (+)
+      console.log("My friend name is " + fullname);
+      console.log("My friend name is " + fullname);
+      console.log(`My friend name is ` + fullname);
+
+      // Backticks (``)
+
+      var lady = "John Doe";
+      console.log(lady);
+      console.log("We love lady");
+      console.log(`We love ${lady}`);
+
+			var num1 = 100;
+			const num2 = 200;
+			
+			console.log(num1);
+			console.log(num2);
+			console.log(num1,num2);
+			console.log(num1+num2);
+
+			console.log("num1" + "num2");
+			console.log("num1+num2");
+			console.log('num1+num2');
+			console.log(`num1+num2`);
+
+			console.log(`${num1} + ${num2}`);
+			console.log(`${num1}`+`${num2}`);
+			console.log(`${num1+num2}`);
+			console.log(typeof `${num1+num2}`);
+
+			// Overwrite / Override
+
+			var num3 = 30;
+			var num4 = 40;
+			console.log("num3 is " + num3);
+			console.log("num4 is " + num4);
+			console.log(num3+num4);
+			
+			num3 = 50;
+			console.log("the vale of num3 is " + num3);
+			console.log(num3+num4);
+
+			let num5 = 50;
+			console.log(num5);
+
+			num5 = 500;
+			console.log(num5);
+
+			// let num5 = 5000;
+			
+			const PI = 3.142;
+			console.log(PI);
+
+			// Special Escape Characters(\)
+			console.log("Hay i am working. do you see now");
+			console.log("hay i am 'working' do you see now");
+			console.log('hay i am "working" do you see now');
+			console.log('hay i am \'working\' do you see now');
+			console.log("hey i am \"working\" do you see now");
+			console.log(`hey i am 'working' do you see "now"`);
+
+			let x = 'he\'s U Ba';
+			let y = "he's my \"Uncle\"";
+			console.log(`${x} ${y}`); 
+
+
+    </script>
+  </body>
 </html>
+
+
+<!-- 
+string datatype
+number datatype
+boolean datatype
+
++
+(num+num = calculate);
+(string+string or string + number = concat)
+
+Variable Name
+We can use
+letter,number,_,$
+
+let firstname = "mgmg"; // recommend
+let firstName = "mgmg";
+let first_name = "mgmg";
+let $firstname = "mgmg"; 
+let name1 = "mgmg";  // recommend
+
+We can't use
+
+let first name = "mgmg";
+let first-name = "mgmg";
+let @firstname = "mgmg";
+let 1name = "mgmg";
+
+
+-->
